# vinoMonitor

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.prod.yml  docker-compose.yml  env.docker
analytics-service/: Cargo.toml
auth-service/: .env.example  Cargo.toml  Dockerfile
auth-service/migrations/: 20260215180910_init.up.sql  20260215181201_down.down.sql
auth-service/src/: app.rs  config.rs  error.rs  main.rs  routes.rs
auth-service/src/db/: mod.rs  user_repository.rs
auth-service/src/dto/: auth_dto.rs  mod.rs
auth-service/src/extractors/: auth.rs
auth-service/src/handlers/: auth_handler.rs  mod.rs
auth-service/src/middleware/: mod.rs  settings.rs
auth-service/src/models/: mod.rs  token.rs  user.rs
auth-service/src/utils/: mod.rs  password.rs
fermentation-service/: Cargo.toml  Dockerfile
fermentation-service/migrations/: 20260217143940_init.down.sql  20260217143940_init.up.sql
fermentation-service/src/: config.rs  error.rs  main.rs  routes.rs
fermentation-service/src/db/: fermentation_repository.rs  mod.rs
fermentation-service/src/extractors/: auth.rs
fermentation-service/src/handlers/: fermentation.rs  mod.rs
fermentation-service/src/models/: fermentation.rs  mod.rs  token.rs
fermentation-service/src/pdf/: batch_report.rs  mod.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx  MapPicker.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Fermentation.tsx  FermentationDetail.tsx  HarvestDetail.tsx  Harvests.tsx  Login.tsx  Register.tsx  VineyardDetail.tsx  Vineyards.tsx
frontend/src/services/: api.ts  authService.ts  fermentationService.ts  harvestService.ts  pdfService.ts  vineyardService.ts
frontend/src/styles/: Dashboard.css  Fermentation.css  FermentationDetail.css  HarvestDetail.css  Harvests.css  Layout.css  VineyardDetail.css  Vineyards.css  global.css
frontend/src/types/: index.ts
harvest-service/: Cargo.toml  Dockerfile
harvest-service/migrations/: 20260217140236_init.down.sql  20260217140236_init.up.sql
harvest-service/src/: config.rs  error.rs  main.rs  routes.rs
harvest-service/src/db/: harvest_repository.rs  mod.rs  pool.rs
harvest-service/src/handlers/: harvest.rs  mod.rs
harvest-service/src/middleware/: mod.rs
harvest-service/src/models/: harvest.rs  mod.rs
harvest-service/src/pdf/: harvest_report.rs  mod.rs
inventory-service/: Cargo.toml
vineyard-service/: Cargo.toml  Dockerfile
vineyard-service/migrations/: 20260215181139_down.down.sql  20260216015725_init.up.sql
vineyard-service/src/: config.rs  error.rs  main.rs  routes.rs
vineyard-service/src/db/: mod.rs  pool.rs  vineyard_repository.rs
vineyard-service/src/extractors/: auth.rs  mod.rs
vineyard-service/src/handlers/: mod.rs  vineyard.rs
vineyard-service/src/models/: mod.rs  token.rs  vineyard.rs
vineyard-service/src/utils/: password.rs
