[package]
name = "harvest-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "harvest-service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }

jsonwebtoken = "9"

dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }

thiserror = "1"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }